# Abra

./: .gitignore  Cargo.toml  README.md
engines/: 1827731428.json
src/: lib.rs  main.rs
src/cli/: interface.rs  mod.rs
src/functionality/: engine_wrapper.rs  file_manager.rs  game.rs  mod.rs  time_control.rs  tourney.rs  uci_engine.rs  uci_engine_wrapper.rs  uci_option.rs
src/gui/: app.rs  board.rs  engine_info.rs  engines.rs  engines_page.rs  game.rs  game_page.rs  menu.rs  mod.rs  play_page.rs  style.css  tourney_page.rs
